--- a/code/index.html
+++ b/code/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Online Code Beautifier for JavaScript, HTML, CSS and PHP</title>
+        <title>Online HTML Beautifier & Formatter for JavaScript, HTML, CSS and PHP</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="author" content="Amit Agarwal - www.labnol.org">
         <meta name="description" content="With Code Beautifier, you can pretty-print and syntax highlight source code written in JavaScript, HTML, CSS, PHP or other programming languages." />
         <link rel="alternate" type="application/rss+xml" title="Digital Inspiration" href="http://feeds.labnol.org/labnol" />
         <script>
@@ -37,31 +36,8 @@
   
         <div class="container">
 
-            <h2><a href="#">Source Code Beautifier</a></h2>
+            <h1>Online HTML Beautifier & Formatter for JavaScript, HTML, CSS and PHP</h1>
 
-            <div class="control-group help">
-                Copy-paste any obfuscated piece of source code and the online beautifier will prettify and syntax-highlight the code making it easier to read and understand.. <a href="#info" data-toggle="modal">learn more &rarr;</a>
-            </div>
-
-            <style>
-                .CodeMirror {
-                    border: 1px solid #C0C0C0;
-                    height: auto;
-                    font-family: 'Source Code Pro', monospace;
-                }
-
-                .CodeMirror-empty {
-                    outline: 1px solid #c22;
-                }
-
-                .CodeMirror-empty.CodeMirror-focused {
-                    outline: none;
-                }
-
-                .CodeMirror pre.CodeMirror-placeholder {
-                    color: #999;
-                }
-            </style>
             <form class="form-horizontal well">
                 <div class="control-group">
                     <textarea id="code" name="code" placeholder="Copy-paste your source code here..">
@@ -71,7 +47,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width">
-<title>ctrlq</title>
+<title>My Page Title</title>
 </head>
 
 <body><h1>Hello World</h1></body>
@@ -81,7 +57,7 @@
                 <div class="control-group">
                     <div class="controls2">
                         <a href="#" onclick="autoFormat();
-                return false;" class="btn btn-inverse btn-large"><i class="icon-white icon-camera"></i> Beautify Code</a>
+                return false;" class="btn btn-inverse btn-large"><i class="icon-white icon-camera"></i>Format Please</a>
                     </div>
                 </div>
             </form>
@@ -107,11 +83,11 @@
 
         </div>
 
-        <div class="platforms">
+<!--        <div class="platforms">
             <a href="#">Twitter</a> |
             <a href="#">Tech Blog</a> |
             <a href="#">Video Tutorials</a>
-        </div>
+        </div>-->
 
 
         <script src="js/bootstrap.min.js"></script>
