--- a/Online-HTML-Beautifier-and-Formatter/index.html
+++ b/Online-HTML-Beautifier-and-Formatter/index.html
@@ -4,9 +4,8 @@
         <meta charset="utf-8">
         <title>Online HTML Beautifier & Formatter for JavaScript, HTML, CSS and PHP</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="With Code Beautifier, you can pretty-print and syntax highlight source code written in JavaScript, HTML, CSS, PHP or other programming languages." />
-        <link rel="alternate" type="application/rss+xml" title="Digital Inspiration" href="http://feeds.labnol.org/labnol" />
-        <script>
+        <meta name="description" content="With Online HTML Beautifier & Formatter, you can beautyfy and format your source code written in JavaScript, HTML, CSS, PHP or other programming languages." />
+       <script>
             if (window.location.protocol !== "https:")
                 window.location.href = "https:" + window.location.href.substring(window.location.protocol.length);
         </script>
@@ -37,7 +36,8 @@
         <div class="container">
 
             <h1>Online HTML Beautifier & Formatter for JavaScript, HTML, CSS and PHP</h1>
-
+            <p>With Online HTML Beautifier & Formatter, you can beautyfy and format your source code written in JavaScript, HTML, CSS, PHP or other programming languages. It is very easy, simple and time saving tool. </p>
+            <br/>
             <form class="form-horizontal well">
                 <div class="control-group">
                     <textarea id="code" name="code" placeholder="Copy-paste your source code here..">
