--- a/index.html
+++ b/index.html
@@ -1,2 +1,4 @@
-<a href="https://himanshu208.github.io/Online-HTML-Beautifier-and-Formatter">Online-HTML-Beautifier-and-Formatter</a>
-<a href="https://himanshu208.github.io/Online-JSON-Validator-and-Formatter">Online-JSON-Validator-and-Formatter</a>
+<ul>
+<li><a href="https://himanshu208.github.io/Online-HTML-Beautifier-and-Formatter">Online-HTML-Beautifier-and-Formatter</a></li>
+<li><a href="https://himanshu208.github.io/Online-JSON-Validator-and-Formatter">Online-JSON-Validator-and-Formatter</a></li>
+</ul>
