--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <ul>
+<li><a href="https://himanshu208.github.io/Strong-Random-Password-Generator">Strong-Random-Password-Generator</a></li>
 <li><a href="https://himanshu208.github.io/Online-HTML-Beautifier-and-Formatter">Online-HTML-Beautifier-and-Formatter</a></li>
 <li><a href="https://himanshu208.github.io/Online-JSON-Validator-and-Formatter">Online-JSON-Validator-and-Formatter</a></li>
 </ul>
