--- a/Strong-Random-Password-Generator/index.html
+++ b/Strong-Random-Password-Generator/index.html
@@ -720,7 +720,7 @@
                             <option value="15">15</option>
                         </optgroup>
                         <optgroup label="Strong">
-                            <option value="16">16</option>
+                            <option value="16" selected>16</option>
                             <option value="17">17</option>
                             <option value="18">18</option>
                             <option value="19">19</option>
